--- a/test-output/old/TestSuite/methods-alphabetical.html
+++ b/test-output/old/TestSuite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="808ccb">  <td>23/03/16 11:25:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;PixivSearchTest.afterTest()[pri:0, instance:com.pixiv.net.PixivSearchTest@2488b073]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1177195028</td>   <td></td> </tr>
-<tr bgcolor="808ccb">  <td>23/03/16 11:24:38</td>   <td>-27958</td> <td>&nbsp;</td><td title="&gt;&gt;PixivSearchTest.beforeTest(java.lang.String, java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@2488b073]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1177195028</td>   <td></td> </tr>
-<tr bgcolor="808ccb">  <td>23/03/16 11:24:41</td>   <td>-24750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f()[pri:0, instance:com.pixiv.net.PixivSearchTest@2488b073]">f</td> 
-  <td>TestNG-tests-1@1177195028</td>   <td></td> </tr>
+<tr bgcolor="62bced">  <td>23/03/28 12:34:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;PixivSearchTest.afterTest()[pri:0, instance:com.pixiv.net.PixivSearchTest@1cd201a8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@658003760</td>   <td></td> </tr>
+<tr bgcolor="62bced">  <td>23/03/28 12:33:10</td>   <td>-55785</td> <td>&nbsp;</td><td title="&gt;&gt;PixivSearchTest.beforeTest(java.lang.String, java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@1cd201a8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@658003760</td>   <td></td> </tr>
+<tr bgcolor="62bced">  <td>23/03/28 12:33:14</td>   <td>-52368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f()[pri:0, instance:com.pixiv.net.PixivSearchTest@1cd201a8]">f</td> 
+  <td>TestNG-tests-1@658003760</td>   <td></td> </tr>
 </table>
