--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,38 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">TestSuite</th></tr>
-<tr><td><a href="#t0">CHROME</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">56.384</td><td></td><td></td></tr>
+<tr><td><a href="#t0">CHROME</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">132.165</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">CHROME &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pixiv.net.PixivSearchTest</td><td><a href="#m0">f</a></td><td rowspan="1">1680017594135</td><td rowspan="1">52355</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">CHROME &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.pixiv.net.PixivSearchTest</td><td><a href="#m0">f</a></td><td rowspan="1">1682349659910</td><td rowspan="1">9463</td></tr><tr><th colspan="4">CHROME &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.pixiv.net.PixivSearchTest</td><td><a href="#m1">f</a></td><td rowspan="3">1682349590624</td><td rowspan="3">37877</td></tr><tr class="passedeven"><td><a href="#m2">f</a></td></tr><tr class="passedeven"><td><a href="#m3">f</a></td></tr></tbody>
 </table>
-<h2>CHROME</h2><h3 id="m0">com.pixiv.net.PixivSearchTest#f</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>CHROME</h2><h3 id="m0">com.pixiv.net.PixivSearchTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>mecha</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.StaleElementReferenceException: stale element reference: element is not attached to the page document
+  (Session info: chrome=110.0.5481.177)
+For documentation on this error, please visit: https://selenium.dev/exceptions/#stale_element_reference
+Build info: version: &apos;4.8.1&apos;, revision: &apos;8ebccac989&apos;
+System info: os.name: &apos;Linux&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;5.4.0-147-generic&apos;, java.version: &apos;19.0.2&apos;
+Driver info: org.openqa.selenium.remote.RemoteWebDriver
+Command: [141884b52de8edd8009f10ddeb53fc4b, clickElement {id=dc96f0d8-aff8-4551-83a7-db03c1001c71}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 110.0.5481.177, chrome: {chromedriverVersion: 110.0.5481.77 (65ed616c6e8e..., userDataDir: /tmp/.com.google.Chrome.x510oC}, goog:chromeOptions: {debuggerAddress: localhost:44473}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: LINUX, proxy: Proxy(), se:bidiEnabled: false, se:cdp: ws://172.18.0.3:4444/sessio..., se:cdpVersion: 110.0.5481.177, se:vnc: ws://172.18.0.3:4444/sessio..., se:vncEnabled: true, se:vncLocalAddress: ws://172.18.0.3:7900, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Element: [[RemoteWebDriver: chrome on LINUX (141884b52de8edd8009f10ddeb53fc4b)] -&gt; css selector: div&gt;ul&gt;li&gt;div]
+Session ID: 141884b52de8edd8009f10ddeb53fc4b
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+	at org.openqa.selenium.remote.TracedCommandExecutor.execute(TracedCommandExecutor.java:51)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:543)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:257)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:78)
+	at pageModel.PixivIllustrations.ilustracionClick(PixivIllustrations.java:31)
+	at com.pixiv.net.PixivSearchTest.f(PixivSearchTest.java:58)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1589)
+... Removed 19 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.pixiv.net.PixivSearchTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>gundam</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.pixiv.net.PixivSearchTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Fate/GrandOrder</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.pixiv.net.PixivSearchTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>glasses</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
