--- a/test-output/old/TestSuite/methods.html
+++ b/test-output/old/TestSuite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62bced">  <td>23/03/28 12:33:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;PixivSearchTest.beforeTest(java.lang.String, java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@1cd201a8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@658003760</td>   <td></td> </tr>
-<tr bgcolor="62bced">  <td>23/03/28 12:33:14</td>   <td>3417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f()[pri:0, instance:com.pixiv.net.PixivSearchTest@1cd201a8]">f</td> 
-  <td>TestNG-tests-1@658003760</td>   <td></td> </tr>
-<tr bgcolor="62bced">  <td>23/03/28 12:34:06</td>   <td>55785</td> <td>&nbsp;</td><td title="&lt;&lt;PixivSearchTest.afterTest()[pri:0, instance:com.pixiv.net.PixivSearchTest@1cd201a8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@658003760</td>   <td></td> </tr>
+<tr bgcolor="d59276">  <td>23/04/24 12:19:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PixivSearchTest.beforeTest(java.lang.String, java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@8deb645]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1050157255</td>   <td></td> </tr>
+<tr bgcolor="d59276">  <td>23/04/24 12:19:50</td>   <td>29254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f(java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@8deb645]">f</td> 
+  <td>TestNG-tests-1@1050157255</td>   <td></td> </tr>
+<tr bgcolor="d59276">  <td>23/04/24 12:20:28</td>   <td>67251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f(java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@8deb645]">f</td> 
+  <td>TestNG-tests-1@1050157255</td>   <td></td> </tr>
+<tr bgcolor="d59276">  <td>23/04/24 12:20:59</td>   <td>98540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f(java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@8deb645]">f</td> 
+  <td>TestNG-tests-1@1050157255</td>   <td></td> </tr>
+<tr bgcolor="d59276">  <td>23/04/24 12:21:09</td>   <td>108010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PixivSearchTest.f(java.lang.String)[pri:0, instance:com.pixiv.net.PixivSearchTest@8deb645]">f</td> 
+  <td>TestNG-tests-1@1050157255</td>   <td></td> </tr>
+<tr bgcolor="d59276">  <td>23/04/24 12:21:32</td>   <td>131538</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PixivSearchTest.afterTest()[pri:0, instance:com.pixiv.net.PixivSearchTest@8deb645]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1050157255</td>   <td></td> </tr>
 </table>
